--- a/Material de Clases/Capítulo 6/01 - Análisis y visualización de datos.ipynb
+++ b/Material de Clases/Capítulo 6/01 - Análisis y visualización de datos.ipynb
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La función `describe()` proporciona el conteo, media, desviación, mínimo, cuartíles y máximo de los datos. A continuación algunas aspectos que pueden deducirse de esta información:\n",
+    "La función `describe()` proporciona el conteo, media, desviación, mínimo, cuartiles y máximo de los datos. A continuación algunas aspectos que pueden deducirse de esta información:\n",
     "\n",
     "* LoanAmount tiene (614-592) 22 valores perdidos.\n",
     "* Loan_Amount_Term tiene (614-600) 14 valores faltantes.\n",
@@ -567,7 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El rendimiento reportado, corresponde al porcentaje de acierto del modelo en el mismo conjunto en que se calibró. Dado que esto puede entregar una idea incorrecta sobre el rendimiento real del modelo, se reporta también el rendimiento corregido, que entrega el rendimiento promedio del algoritmo en un conjunto de datos no visto, utilizando [validación cruzada](https://en.wikipedia.org/wiki/Cross-validation_(statistics))."
+    "El rendimiento reportado, corresponde al porcentaje de acierto del modelo en el mismo conjunto en que se calibró. Dado que esto puede entregar una idea incorrecta sobre el rendimiento real del modelo, se reporta también el rendimiento corregido, que entrega el rendimiento promedio del algoritmo en un conjunto de datos no visto, utilizando [validación cruzada](https://bit.ly/1CHXsNH)."
    ]
   },
   {
@@ -645,7 +645,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Aquí observamos que, aunque aumentó el rendimiento, la corrección de este (validación cruzada) bajó. Este es el resultado de un modelo que sobreajusta los datos. Queda como ejercicio buscar nuevas combinaciones de variables que mejoren el rendimiento corregido (o la creación de nuevas variables, como vimos anteriormente)."
