--- a/Ayudantías/Ayudantía análisis de datos.ipynb
+++ b/Ayudantías/Ayudantía análisis de datos.ipynb
@@ -339,7 +339,7 @@
    "outputs": [],
    "source": [
     "plt.bar(normalized_columns, top_tracks[normalized_columns].mean(), color=\"#a4b8c4\")\n",
-    "plt.bar(normalized_columns, test_dataset[normalized_columns].mean(), color=\"#0cca4a\")\n",
+    "plt.bar(normalized_columns, test_dataset[normalized_columns].mean(), color=\"#0cca4a\", alpha= 0.5)\n",
     "plt.legend([\"top\", \"ayudante\"])\n",
     "plt.title(\"Comparación entre los data sets\")\n",
     "plt.xlabel(\"Audio feature\")\n",
@@ -445,8 +445,7 @@
     "plt.yticks(())\n",
     "plt.title(\"Danceability and Valence\")\n",
     "plt.xlabel(\"Danceability\")\n",
-    "plt.ylabel(\"Valence\")\n",
-    "plt.show()"
+    "plt.ylabel(\"Valence\")"
    ]
   },
   {
